--- a/index.html
+++ b/index.html
@@ -109,6 +109,12 @@
                         </button>
                     </div>
                     <div class="stat-card premium">
+                        <i class="fas fa-clock"></i>
+                        <span class="stat-label">Last Claim</span>
+                        <span id="lastClaimTime" class="stat-value">--:--</span>
+                        <span id="nextClaimTime" class="stat-small">Next: --h --m</span>
+                    </div>
+                    <div class="stat-card premium">
                         <i class="fas fa-users"></i>
                         <span class="stat-label">Total Referrals</span>
                         <span id="totalReferrals" class="stat-value">0</span>
